force-app/main/default/objects/FSM_BusinessUnitToPublicGroupMap__mdt/FSM_BusinessUnitToPublicGroupMap__mdt.object-meta.xml
<CustomObject>
    <description>SFS-231, map between Business Unit and Public group API name</description>
    <label>Business Unit to Public Group Map</label>
    <pluralLabel>Business Unit to Public Group Maps</pluralLabel>
</CustomObject>