force-app/main/default/objects/FSM_BusinessUnitToPublicGroupMap__mdt/fields/FSM_FieldWorkerPublicGroupAPI__c.field-meta.xml
<CustomField>
    <fullName>FSM_FieldWorkerPublicGroupAPI__c</fullName>
    <description>SFS-231, BU wise public group API name for Field Worker</description>
    <label>Field Worker Public Group API</label>
    <length>50</length>
    <type>Text</type>
</CustomField>