force-app/main/default/objects/FSM_BusinessUnitToPublicGroupMap__mdt/fields/FSM_IsActive__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>SFS-231, is this setting active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>