force-app/main/default/objects/FSM_BusinessUnitToPublicGroupMap__mdt/fields/FSM_SchedulerPublicGroupAPI__c.field-meta.xml
<CustomField>
    <fullName>FSM_SchedulerPublicGroupAPI__c</fullName>
    <description>SFS-231, BU wise public group API name for Scheduler</description>
    <label>Scheduler Public Group API</label>
    <length>50</length>
    <type>Text</type>
</CustomField>