force-app/main/default/objects/FSM_BusinessUnitToPublicGroupMap__mdt/listViews/All_records.listView-meta.xml
<ListView>
    <fullName>All_records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>FSM_BusinessUnit__c</columns>
    <columns>FSM_SchedulerPublicGroupAPI__c</columns>
    <columns>FSM_FieldWorkerPublicGroupAPI__c</columns>
    <columns>FSM_IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All records</label>
</ListView>